[package]
name = "hcml"
version = "0.1.0"
description = "Translates HCML to HTML"
edition = "2021"
rust-version = "1.78.0"
authors = [ "Aaron Li <aaron.li@genvira.com>" ]
license = "EUPL"
repository = "https://github.com/abclop99/hcml"
publish = false

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
either = "1.13.0"
getset = "0.1.4"
itertools = "0.14.0"
pest = "2.7.15"
pest_derive = "2.7.15"
smart-default = "0.7.1"
thiserror = "2.0.11"

[dev-dependencies]
html-compare-rs = "0.3.0"
